--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
   "dependencies": {
     "winston": "^3.10.0",
     "winston-transport": "^4.5.0",
-    "logform": "^2.5.1"
+    "logform": "^2.5.1",
+    "axios": "^1.5.0"
   },
   "devDependencies": {
     "tslint": "^5.9.1",
-    "@types/request": "^2.48.8",
     "typescript": "^5.0.2",
     "@types/triple-beam": "^1.3.2"
   }
